added github action R CMD check workflow

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # lifecycling :bicyclist: :bicyclist: :bicyclist:
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/joshwlambert/lifecycling/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/joshwlambert/lifecycling/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of lifecycling is to demonstrate good practises for communicating the 
