added code coverage

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/joshwlambert/lifecycling/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/joshwlambert/lifecycling/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/joshwlambert/lifecycling/branch/main/graph/badge.svg)](https://app.codecov.io/gh/joshwlambert/lifecycling?branch=main)
 <!-- badges: end -->
 
 The goal of lifecycling is to demonstrate good practises for communicating the 
