added missing parenthesis to vignette

--- a/vignettes/comm_code_dev.Rmd
+++ b/vignettes/comm_code_dev.Rmd
@@ -92,7 +92,7 @@ cat("![](https://raw.githubusercontent.com/r-lib/lifecycle/main/vignettes/figure
 ```
 *Reused under MIT license from [lifecycles R package](https://lifecycle.r-lib.org/articles/stages.html)*
 
-One of the main differences between the tidyverse lifecycles, compared to the others discussed in this posts is their applicability at different levels in the code. The lifecycle badges can be applied at the package-level (e.g., [stringr](https://github.com/tidyverse/stringr), the function-level (e.g. [`dplyr::group_trim()`](https://github.com/tidyverse/dplyr/blob/16b472fb2afc50a87502c2b4ed803e2f5f82b9d6/R/group-trim.R)) or the argument level (e.g., [`dplyr::across()`](https://github.com/tidyverse/dplyr/blob/16b472fb2afc50a87502c2b4ed803e2f5f82b9d6/R/across.R#L36)). 
+One of the main differences between the tidyverse lifecycles, compared to the others discussed in this posts is their applicability at different levels in the code. The lifecycle badges can be applied at the package-level (e.g., [stringr](https://github.com/tidyverse/stringr)), the function-level (e.g. [`dplyr::group_trim()`](https://github.com/tidyverse/dplyr/blob/16b472fb2afc50a87502c2b4ed803e2f5f82b9d6/R/group-trim.R)) or the argument level (e.g., [`dplyr::across()`](https://github.com/tidyverse/dplyr/blob/16b472fb2afc50a87502c2b4ed803e2f5f82b9d6/R/across.R#L36)). 
 
 Using {lifecycle} in a package can be setup using:
 
