added commits since last release badge to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/joshwlambert/lifecycling/branch/main/graph/badge.svg)](https://app.codecov.io/gh/joshwlambert/lifecycling?branch=main)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 ![GitHub last commit (by committer)](https://img.shields.io/github/last-commit/joshwlambert/lifecycling?color=%23E6E6FA)
+![GitHub commits since latest release (by SemVer including pre-releases)](https://img.shields.io/github/commits-since/joshwlambert/lifecycling/v0.1.0/main)
 <!-- badges: end -->
 
 The goal of lifecycling is to demonstrate good practises for communicating the 
